zokrates_cli/examples/compile_errors/constant_type_error.zok
const u32[2] A = [1];

def main() -> u32[2] {
    return A;
}
